--- a/Introduction-To-Node.js-and-Package-Manager/package.json
+++ b/Introduction-To-Node.js-and-Package-Manager/package.json
@@ -1,12 +1,16 @@
 {
   "name": "introduction-to-node.js-and-package-manager",
   "version": "1.0.0",
-  "description": "",
+  "description": "Learning NodeJS",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node": "^19.2.0",
+    "underscore": "^1.13.6"
+  }
 }
