--- a/boilerplate-backend/package.json
+++ b/boilerplate-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phero-final-project-server",
+  "name": "boilerplate-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,10 +16,11 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-rate-limit": "^6.7.0",
+    "express-rate-limit": "^6.5.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
     "stripe": "^10.3.0"
   }
 }
