--- a/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
+++ b/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
