--- a/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
+++ b/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
@@ -11,8 +11,10 @@
   "author": "md rasel mia",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
