--- a/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
+++ b/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
@@ -17,7 +17,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mailgun": "^0.5.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
