--- a/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
+++ b/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
@@ -20,8 +20,11 @@
     "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "mailgun": "^0.5.0",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^8.2.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
