--- a/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
+++ b/Introduction-to-Mongoose-and-Implement/inventory-management/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
+    "googleapis": "^112.0.0",
     "jsonwebtoken": "^9.0.0",
     "mailgun": "^0.5.0",
     "mailgun-js": "^0.22.0",
